fix(security): enforce customer data scoping and correct role permissions